@@ -1,3 +1,11 @@
+2007-03-19  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: totem, gnome-vfs, eel, nautilus,
+	gnome-control-center branched for 2.18.
+	gtk-engines moved to desktop category.
+	Fixes bug #420099.
+
 2007-03-18  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
